new code with 2 scene

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <!--    <script src="https://cdn.jsdelivr.net/npm/three@0.114.0/examples/jsm/loaders/RGBELoader.js"></script>-->
     <!--    <script src="https://cdn.jsdelivr.net/npm/three@0.114.0/examples/jsm/loaders/DRACOLoader.js"></script>-->
 
-    <div class="control_buttons">
-        <button class="go_to">Go To!</button>
-        <button class="go_to">Go To!</button>
-        <button class="go_to">Go To!</button>
-        <button class="go_to">Go To!</button>
-        <button class="go_to">Go To!</button>
-    </div>
+<!--    <div class="control_buttons">-->
+<!--        <button class="go_to">Go To!</button>-->
+<!--        <button class="go_to">Go To!</button>-->
+<!--        <button class="go_to">Go To!</button>-->
+<!--        <button class="go_to">Go To!</button>-->
+<!--        <button class="go_to">Go To!</button>-->
+<!--    </div>-->
 
         <script type="module" src="./my_three.js"></script>
     </body>
