--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Document</title>
+        <title>Гараж ЦОДД</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -15,13 +15,15 @@
     <!--    <script src="https://cdn.jsdelivr.net/npm/three@0.114.0/examples/jsm/loaders/RGBELoader.js"></script>-->
     <!--    <script src="https://cdn.jsdelivr.net/npm/three@0.114.0/examples/jsm/loaders/DRACOLoader.js"></script>-->
 
-    <div class="control_buttons">
-        <button class="go_to">Go To!</button>
-        <button class="go_to">Go To!</button>
-        <button class="go_to">Go To!</button>
-        <button class="go_to">Go To!</button>
-        <button class="go_to">Go To!</button>
-        <button class="interior">interior</button>
+    <div class="control_wrapper">
+        <div class="control_buttons">
+            <button class="go_to">Go To!</button>
+            <button class="go_to">Go To!</button>
+            <button class="go_to">Go To!</button>
+            <button class="go_to">Go To!</button>
+            <button class="go_to">Go To!</button>
+            <button class="interior">interior</button>
+        </div>
     </div>
 
         <script type="module" src="./my_three.js"></script>
