--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Гараж ЦОДД</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
     <!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.151.3/three.min.js"></script>-->
@@ -17,11 +17,11 @@
 
     <div class="control_wrapper">
         <div class="control_buttons">
-            <button class="go_to">Go To!</button>
-            <button class="go_to">Go To!</button>
-            <button class="go_to">Go To!</button>
-            <button class="go_to">Go To!</button>
-            <button class="go_to">Go To!</button>
+            <button class="go_to">Go!</button>
+            <button class="go_to">Go!</button>
+            <button class="go_to">Go!</button>
+            <button class="go_to">Go!</button>
+            <button class="go_to">Go!</button>
             <button class="interior">interior</button>
         </div>
     </div>
