three material filter

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,8 @@
         </div>
     </div>
 
+    <div id="gui-container"></div>
+
         <script type="module" src="./my_three.js"></script>
     </body>
 </html>
