--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
                 <div class="header__wrapper">
                     <div class="header__logo">
                         <img class="header__logo-img" src="./img/layout/header_logo.svg" alt="logo">
-                        <p class="header__logo-text">Гараж ЦОТТ ММММ</p>
+                        <p class="header__logo-text">Гараж ЦОДД</p>
                     </div>
                     <div class="header__info">
                         <img class="header__info-img" src="./img/layout/header_img.png" alt="model_preview">
@@ -45,6 +45,101 @@
                 </div>
             </div>
         </header>
+
+        <section class="tech_spec">
+            <div class="container">
+                <div class="tech_spec__wrapper">
+                    <div class="tech_spec__description">
+                        <div class="tech_spec__titles">
+                            <p class="tech_spec__title">Дорожный патруль</p>
+                            <p class="tech_spec__subtitle">Автомобиль службы помощи ЦОДД</p>
+                        </div>
+                        <div class="tech_spec__mission">
+                            <p class="tech_spec__text">Задача:</p>
+                            <p class="tech_spec__text-descr">Регулировать движение на сложных участках, помогать водителям при поломке или аварии.</p>
+                        </div>
+                        <div class="tech_spec__outfit">
+                            <p class="tech_spec__text">Экипировка:</p>
+                            <ul class="tech_spec__outfit-list">
+                                <li class="tech_spec__outfit-item">
+                                    <div class="tech_spec__outfit-img">
+                                        <img src="./img/layout/outfit/outfit_1.svg" alt="fire">
+                                    </div>
+                                    <span class="tech_spec__outfit-text">Огнетушитель</span>
+                                </li>
+                                <li class="tech_spec__outfit-item">
+                                    <div class="tech_spec__outfit-img">
+                                        <img src="./img/layout/outfit/outfit_2.svg" alt="fire">
+                                    </div>
+                                    <span class="tech_spec__outfit-text">Огнетушитель</span>
+                                </li>
+                                <li class="tech_spec__outfit-item">
+                                    <div class="tech_spec__outfit-img">
+                                        <img src="./img/layout/outfit/outfit_3.svg" alt="fire">
+                                    </div>
+                                    <span class="tech_spec__outfit-text">Огнетушитель</span>
+                                </li>
+                                <li class="tech_spec__outfit-item">
+                                    <div class="tech_spec__outfit-img">
+                                        <img src="./img/layout/outfit/outfit_4.svg" alt="fire">
+                                    </div>
+                                    <span class="tech_spec__outfit-text">Огнетушитель</span>
+                                </li>
+                                <li class="tech_spec__outfit-item">
+                                    <div class="tech_spec__outfit-img">
+                                        <img src="./img/layout/outfit/outfit_5.svg" alt="fire">
+                                    </div>
+                                    <span class="tech_spec__outfit-text">Огнетушитель</span>
+                                </li>
+                                <li class="tech_spec__outfit-item">
+                                    <div class="tech_spec__outfit-img">
+                                        <img src="./img/layout/outfit/outfit_6.svg" alt="fire">
+                                    </div>
+                                    <span class="tech_spec__outfit-text">Огнетушитель</span>
+                                </li>
+                                <li class="tech_spec__outfit-item">
+                                    <div class="tech_spec__outfit-img">
+                                        <img src="./img/layout/outfit/outfit_7.svg" alt="fire">
+                                    </div>
+                                    <span class="tech_spec__outfit-text">Огнетушитель</span>
+                                </li>
+                                <li class="tech_spec__outfit-item">
+                                    <div class="tech_spec__outfit-img">
+                                        <img src="./img/layout/outfit/outfit_8.svg" alt="fire">
+                                    </div>
+                                    <span class="tech_spec__outfit-text">Огнетушитель</span>
+                                </li>
+                                <li class="tech_spec__outfit-item">
+                                    <div class="tech_spec__outfit-img">
+                                        <img src="./img/layout/outfit/outfit_9.svg" alt="fire">
+                                    </div>
+                                    <span class="tech_spec__outfit-text">Огнетушитель</span>
+                                </li>
+                                <li class="tech_spec__outfit-item">
+                                    <div class="tech_spec__outfit-img">
+                                        <img src="./img/layout/outfit/outfit_10.svg" alt="fire">
+                                    </div>
+                                    <span class="tech_spec__outfit-text">Огнетушитель</span>
+                                </li>
+                                <li class="tech_spec__outfit-item">
+                                    <div class="tech_spec__outfit-img">
+                                        <img src="./img/layout/outfit/outfit_11.svg" alt="fire">
+                                    </div>
+                                    <span class="tech_spec__outfit-text">Огнетушитель</span>
+                                </li>
+                            </ul>
+                        </div>
+                        <a class="tech_spec__btn">
+                            <span>Скрыть</span>
+                            <img src="./img/layout/icon-arrow.svg" alt="icon-arrow">
+                        </a>
+                    </div>
+                    <div class="tech_spec__interior">
+                        <span class="tech_spec__interior-text"></span>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <script type="module" src="./my_three.js"></script>
     </body>
