--- a/src/index.html
+++ b/src/index.html
@@ -46,101 +46,122 @@
             </div>
         </header>
 
-        <section class="tech_spec">
-            <div class="container">
-                <div class="tech_spec__wrapper">
-                    <div class="tech_spec__description">
-                        <div class="tech_spec__titles">
-                            <p class="tech_spec__title">Дорожный патруль</p>
-                            <p class="tech_spec__subtitle">Автомобиль службы помощи ЦОДД</p>
+        <main>
+            <section class="tech_spec">
+                <div class="container">
+                    <div class="tech_spec__wrapper">
+                        <div class="tech_spec__description">
+                            <div class="tech_spec__titles">
+                                <p class="tech_spec__title">Дорожный патруль</p>
+                                <p class="tech_spec__subtitle">Автомобиль службы помощи ЦОДД</p>
+                            </div>
+                            <div class="tech_spec__mission">
+                                <p class="tech_spec__text">Задача:</p>
+                                <p class="tech_spec__text-descr">Регулировать движение на сложных участках, помогать водителям при поломке или аварии.</p>
+                            </div>
+                            <div class="tech_spec__outfit">
+                                <p class="tech_spec__text">Экипировка:</p>
+                                <ul class="tech_spec__outfit-list">
+                                    <li class="tech_spec__outfit-item">
+                                        <div class="tech_spec__outfit-img">
+                                            <img src="./img/layout/outfit/outfit_1.svg" alt="Огнетушитель">
+                                        </div>
+                                        <span class="tech_spec__outfit-text">Огнетушитель</span>
+                                    </li>
+                                    <li class="tech_spec__outfit-item">
+                                        <div class="tech_spec__outfit-img">
+                                            <img src="./img/layout/outfit/outfit_2.svg" alt="Аптечка">
+                                        </div>
+                                        <span class="tech_spec__outfit-text">Аптечка</span>
+                                    </li>
+                                    <li class="tech_spec__outfit-item">
+                                        <div class="tech_spec__outfit-img">
+                                            <img src="./img/layout/outfit/outfit_3.svg" alt="Инструменты">
+                                        </div>
+                                        <span class="tech_spec__outfit-text">Инструменты</span>
+                                    </li>
+                                    <li class="tech_spec__outfit-item">
+                                        <div class="tech_spec__outfit-img">
+                                            <img src="./img/layout/outfit/outfit_4.svg" alt="Трос">
+                                        </div>
+                                        <span class="tech_spec__outfit-text">Трос</span>
+                                    </li>
+                                    <li class="tech_spec__outfit-item">
+                                        <div class="tech_spec__outfit-img">
+                                            <img src="./img/layout/outfit/outfit_5.svg" alt="Пусковое устройство">
+                                        </div>
+                                        <span class="tech_spec__outfit-text">Пусковое устройство</span>
+                                    </li>
+                                    <li class="tech_spec__outfit-item">
+                                        <div class="tech_spec__outfit-img">
+                                            <img src="./img/layout/outfit/outfit_6.svg" alt="Пусковое устройство">
+                                        </div>
+                                        <span class="tech_spec__outfit-text">Пусковое устройство</span>
+                                    </li>
+                                    <li class="tech_spec__outfit-item">
+                                        <div class="tech_spec__outfit-img">
+                                            <img src="./img/layout/outfit/outfit_7.svg" alt="Бланки европротокола">
+                                        </div>
+                                        <span class="tech_spec__outfit-text">Бланки европротокола</span>
+                                    </li>
+                                    <li class="tech_spec__outfit-item">
+                                        <div class="tech_spec__outfit-img">
+                                            <img src="./img/layout/outfit/outfit_8.svg" alt="Телескопическая лестница">
+                                        </div>
+                                        <span class="tech_spec__outfit-text">Телескопическая лестница</span>
+                                    </li>
+                                    <li class="tech_spec__outfit-item">
+                                        <div class="tech_spec__outfit-img">
+                                            <img src="./img/layout/outfit/outfit_9.svg" alt="Домкрат">
+                                        </div>
+                                        <span class="tech_spec__outfit-text">Домкрат</span>
+                                    </li>
+                                    <li class="tech_spec__outfit-item">
+                                        <div class="tech_spec__outfit-img">
+                                            <img src="./img/layout/outfit/outfit_10.svg" alt="Дорожные конусы">
+                                        </div>
+                                        <span class="tech_spec__outfit-text">Дорожные конусы</span>
+                                    </li>
+                                    <li class="tech_spec__outfit-item">
+                                        <div class="tech_spec__outfit-img">
+                                            <img src="./img/layout/outfit/outfit_11.svg" alt="Гайковерт">
+                                        </div>
+                                        <span class="tech_spec__outfit-text">Гайковерт</span>
+                                    </li>
+                                </ul>
+                            </div>
+                            <a class="tech_spec__btn">
+                                <span>Скрыть</span>
+                                <img src="./img/layout/icon-arrow.svg" alt="icon-arrow">
+                            </a>
                         </div>
-                        <div class="tech_spec__mission">
-                            <p class="tech_spec__text">Задача:</p>
-                            <p class="tech_spec__text-descr">Регулировать движение на сложных участках, помогать водителям при поломке или аварии.</p>
+                        <div class="tech_spec__interior">
+                            <div class="tech_spec__interior-btn">
+                                <span class="tech_spec__interior-text">В салон</span>
+                                <div class="arrow-wrapper">
+                                    <img src="./img/layout/interior_arrow.svg" alt="interior_arrow">
+                                </div>
+                            </div>
                         </div>
-                        <div class="tech_spec__outfit">
-                            <p class="tech_spec__text">Экипировка:</p>
-                            <ul class="tech_spec__outfit-list">
-                                <li class="tech_spec__outfit-item">
-                                    <div class="tech_spec__outfit-img">
-                                        <img src="./img/layout/outfit/outfit_1.svg" alt="fire">
-                                    </div>
-                                    <span class="tech_spec__outfit-text">Огнетушитель</span>
-                                </li>
-                                <li class="tech_spec__outfit-item">
-                                    <div class="tech_spec__outfit-img">
-                                        <img src="./img/layout/outfit/outfit_2.svg" alt="fire">
-                                    </div>
-                                    <span class="tech_spec__outfit-text">Огнетушитель</span>
-                                </li>
-                                <li class="tech_spec__outfit-item">
-                                    <div class="tech_spec__outfit-img">
-                                        <img src="./img/layout/outfit/outfit_3.svg" alt="fire">
-                                    </div>
-                                    <span class="tech_spec__outfit-text">Огнетушитель</span>
-                                </li>
-                                <li class="tech_spec__outfit-item">
-                                    <div class="tech_spec__outfit-img">
-                                        <img src="./img/layout/outfit/outfit_4.svg" alt="fire">
-                                    </div>
-                                    <span class="tech_spec__outfit-text">Огнетушитель</span>
-                                </li>
-                                <li class="tech_spec__outfit-item">
-                                    <div class="tech_spec__outfit-img">
-                                        <img src="./img/layout/outfit/outfit_5.svg" alt="fire">
-                                    </div>
-                                    <span class="tech_spec__outfit-text">Огнетушитель</span>
-                                </li>
-                                <li class="tech_spec__outfit-item">
-                                    <div class="tech_spec__outfit-img">
-                                        <img src="./img/layout/outfit/outfit_6.svg" alt="fire">
-                                    </div>
-                                    <span class="tech_spec__outfit-text">Огнетушитель</span>
-                                </li>
-                                <li class="tech_spec__outfit-item">
-                                    <div class="tech_spec__outfit-img">
-                                        <img src="./img/layout/outfit/outfit_7.svg" alt="fire">
-                                    </div>
-                                    <span class="tech_spec__outfit-text">Огнетушитель</span>
-                                </li>
-                                <li class="tech_spec__outfit-item">
-                                    <div class="tech_spec__outfit-img">
-                                        <img src="./img/layout/outfit/outfit_8.svg" alt="fire">
-                                    </div>
-                                    <span class="tech_spec__outfit-text">Огнетушитель</span>
-                                </li>
-                                <li class="tech_spec__outfit-item">
-                                    <div class="tech_spec__outfit-img">
-                                        <img src="./img/layout/outfit/outfit_9.svg" alt="fire">
-                                    </div>
-                                    <span class="tech_spec__outfit-text">Огнетушитель</span>
-                                </li>
-                                <li class="tech_spec__outfit-item">
-                                    <div class="tech_spec__outfit-img">
-                                        <img src="./img/layout/outfit/outfit_10.svg" alt="fire">
-                                    </div>
-                                    <span class="tech_spec__outfit-text">Огнетушитель</span>
-                                </li>
-                                <li class="tech_spec__outfit-item">
-                                    <div class="tech_spec__outfit-img">
-                                        <img src="./img/layout/outfit/outfit_11.svg" alt="fire">
-                                    </div>
-                                    <span class="tech_spec__outfit-text">Огнетушитель</span>
-                                </li>
-                            </ul>
-                        </div>
-                        <a class="tech_spec__btn">
-                            <span>Скрыть</span>
-                            <img src="./img/layout/icon-arrow.svg" alt="icon-arrow">
-                        </a>
                     </div>
-                    <div class="tech_spec__interior">
-                        <span class="tech_spec__interior-text"></span>
+                </div>
+            </section>
+        </main>
+
+        <section class="auto_park">
+            <div class="container">
+                <div class="auto_park_wrapper">
+                    <div class="auto_park__control">
+                        <p class="auto_park__title">Транспорт ЦОДД</p>
+                        <img src="./img/layout/auto_park_arrow.svg" alt="auto_park_btn">
+                    </div>
+                    <div class="auto_park_slider">
+
                     </div>
                 </div>
             </div>
         </section>
 
-        <script type="module" src="./my_three.js"></script>
+    <script type="module" src="./my_three.js"></script>
     </body>
 </html>
